--- a/blogs/jak-dodac-zdjecie-na-instagram-z-komputera.mdx
+++ b/blogs/jak-dodac-zdjecie-na-instagram-z-komputera.mdx
@@ -1,11 +1,13 @@
 ---
-title: Jak dodać zdjęcie na Instagramie korzystając z komputera - prosty przewodnik?
+title: Jak dodać zdjęcie na Instagramie korzystając z komputera - prosty przewodnik
 date: "13 listopada 2023"
 description: 
 ---
-
 ---
-**Instagram to nie tylko aplikacja mobilna! Jeśli chcesz udostępnić swoje ulubione chwile z życia na Instagramie, ale nie masz pod ręką smartfona, nie martw się - możesz to zrobić również z poziomu komputera. Oto krok po kroku, jak dodać zdjęcie na Instagram korzystając z przeglądarki internetowej na komputerze.**
+
+![Jak dodać zdjęcie na Instagramie korzystając z komputera](/photos/jak-dodac-zdjecie-na-instagram-z-komputera.jpg)
+
+**Instagram to nie tylko aplikacja mobilna! Jeśli chcesz udostępnić zdjęcia na Instagramie, ale nie masz pod ręką smartfona, nie martw się - możesz to zrobić również z poziomu komputera. Oto krok po kroku, jak dodać zdjęcie na Instagram korzystając z przeglądarki internetowej na komputerze.**
 
 ### 1. Otwórz przeglądarkę internetową i zaloguj się na Instagramie:
 
@@ -39,4 +41,4 @@ Po wybraniu zdjęcia, możesz dodać opis, tagi oraz zastosować filtry, tak jak
 
 Kiedy skończysz edytować swoje zdjęcie, kliknij "Dalej" i postępuj zgodnie z instrukcjami, aby opublikować je na swoim koncie.
 
-I to wszystko! Teraz możesz cieszyć się dzieleniem się swoimi chwilami na Instagramie nawet z poziomu swojego komputera. Pamietaj, że ta metoda korzysta z narzędzi deweloperskich przeglądarki, więc może się różnić w zależności od używanej przeglądarki internetowej.
+I to wszystko! Teraz możesz cieszyć się czasem, który udało Ci się zaoszczędzić, żeby nie przerzucać materiałów pomiędzy urządzeniami. Pamiętaj, że ta metoda korzysta z narzędzi deweloperskich przeglądarki, więc może się różnić w zależności od używanej przeglądarki internetowej.
