--- a/blogs/jak-dodac-zdjecie-na-instagram-z-komputera.mdx
+++ b/blogs/jak-dodac-zdjecie-na-instagram-z-komputera.mdx
@@ -5,7 +5,7 @@ description:
 ---
 ---
 
-![Jak dodać zdjęcie na Instagramie korzystając z komputera](/photos/jak-dodac-zdjecie-na-instagram-z-komputera.jpg)
+![Jak dodać zdjęcie na Instagramie korzystając z komputera](/photos/jak-dodac-zdjecie-na-instagramie-korzystajac-z-komputera.jpg)
 
 **Instagram to nie tylko aplikacja mobilna! Jeśli chcesz udostępnić zdjęcia na Instagramie, ale nie masz pod ręką smartfona, nie martw się - możesz to zrobić również z poziomu komputera. Oto krok po kroku, jak dodać zdjęcie na Instagram korzystając z przeglądarki internetowej na komputerze.**
 
@@ -40,6 +40,8 @@ Po wybraniu zdjęcia, możesz dodać opis, tagi oraz zastosować filtry, tak jak
 ### 8. Opublikuj zdjęcie:
 
 Kiedy skończysz edytować swoje zdjęcie, kliknij "Dalej" i postępuj zgodnie z instrukcjami, aby opublikować je na swoim koncie.
+
+![Dodawanie zdjęcia na Instagram z komputera](/photos/dodawanie-zdjecia-na-instagram-z-komputera.jpg)
 
 I to wszystko! Teraz możesz cieszyć się czasem, który udało Ci się zaoszczędzić, żeby nie przerzucać materiałów pomiędzy urządzeniami. Pamiętaj, że ta metoda korzysta z narzędzi deweloperskich przeglądarki, więc może się różnić w zależności od używanej przeglądarki internetowej.
 
