--- a/blogs/jak-dodac-zdjecie-na-instagram-z-komputera.mdx
+++ b/blogs/jak-dodac-zdjecie-na-instagram-z-komputera.mdx
@@ -45,4 +45,4 @@ Kiedy skończysz edytować swoje zdjęcie, kliknij "Dalej" i postępuj zgodnie z
 
 I to wszystko! Teraz możesz cieszyć się czasem, który udało Ci się zaoszczędzić, żeby nie przerzucać materiałów pomiędzy urządzeniami. Pamiętaj, że ta metoda korzysta z narzędzi deweloperskich przeglądarki, więc może się różnić w zależności od używanej przeglądarki internetowej.
 
-### Potrzebujesz pomocy przy prowadzeniu swoich mediów społecznościowych? Zapraszamy do kontaktu. 👇
+### Potrzebujesz pomocy przy prowadzeniu swoich <a href="https://getpromo.pl/marketing/">mediów społecznościowych</a>? Zapraszamy do kontaktu. 👇
